# claude-mpm-agents

./: .gh-account  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTO-DEPLOY-INDEX.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PHASE1_COMPLETE.md  PHASE3_SUMMARY.md  README.md  REFACTORING_REPORT.md  SKILL_REFERENCE_AUDIT.md  TRANSFORMATION_SAMPLES.md  agents-manifest.yaml  build-agent.py  optimize_phase3.py  pyproject.toml  web-research.md
.claude-mpm/: skills-manifest.json
.github/: pull_request_template.md
agents/: .etag-cache.json  .etag-cache.json.migrated  BASE-AGENT.md  agent-manager.md  agentic-coder-optimizer.md  api_qa.md  clerk-ops.md  code_analyzer.md  content-agent.md  dart_engineer.md  data_engineer.md  documentation.md  engineer.md  gcp_ops_agent.md  golang_engineer.md  imagemagick.md  java_engineer.md  javascript-engineer-agent.md  javascript_engineer_agent.md  local-ops-agent.md  local_ops_agent.md  memory_manager.md  nextjs_engineer.md  ops.md  php-engineer.md  product_owner.md  project_organizer.md  prompt-engineer.md  python-engineer.md  python_engineer.md  qa.md  react_engineer.md  refactoring_engineer.md  research.md  ruby-engineer.md  rust_engineer.md  security.md  svelte-engineer.md  tauri_engineer.md  ticketing.md  (+5 more)
scripts/: audit_skills.py  fix_skills.py
templates/: AGENT_TEMPLATE_REFERENCE.md  PM-INSTRUCTIONS.md  circuit-breakers.md  git-file-tracking.md  pm-examples.md  pm-red-flags.md  research-gate-examples.md  response-format.md  validation-templates.md
tests/: README.md  conftest.py  test_agent_knowledge.py  test_agent_patterns.py  (+5 more)
(+129 files in other folders)
